# emberveil2

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  REFERENCES.md  TASKS_HULVDAN.txt  clean_cmake.bat  clean_temp.bat  cpplint.cfg  pyproject.toml
.nvim-personal/: cli.ahk  setup.lua  startup.lua
assets/: level.ldtk  level_ufo.ldtk  localization.csv
assets/art/: atlas.ftpp  atlas_d2.ftpp
assets/art/src/: dist_screenshot.clip  fssort.ini
assets/art/src/main/: main.cmc  page0001.clip
assets/art/src/screenshots/: fssort.ini
assets/palette/: resurrect32.aco  resurrect32.ase  resurrect32.pal
assets/sfx/: music_theme__01.ogg.bak  music_theme__03.ogg.bak
assets/sfx/src/: sfx.rpp
assets/sfx/src/Media/: game_item_pickup.rpp  game_item_put_down.rpp  game_matched.rpp  ui_level_transition.rpp  ui_star.rpp  ui_whoosh.rpp
assets/sfx/src/_sfx/: game_action_queued.rpp  game_item_error.rpp  game_item_exchange.rpp  game_item_pickup.rpp  game_item_put_down.rpp  game_matched.rpp  game_ufo_move.rpp  game_ufo_move_1.rpp  game_ufo_move_2.rpp  game_ufo_move_3.rpp  ui_click.rpp  ui_hover_small.rpp  ui_level_transition.rpp  ui_lost.rpp  ui_star.rpp  ui_whoosh.rpp  ui_won.rpp
cli/: bf_cli.py  bf_cog.py  bf_game.py  bf_gamelib.py  bf_image.py  bf_ldtk.py  bf_lib.py  bf_svg.py  bf_swatch.py  cli.py  win_build_debug.bat  win_build_release.bat  win_clean_cmake.bat  win_clean_temp.bat  win_codegen_debug.bat  win_meld.bat  win_start.bat  win_test.bat
src/: bf_game.cpp  bf_lib.cpp  bf_lib_base.cpp  bf_lib_containers.cpp  bf_lib_instrument.cpp  bf_lib_math.cpp  bf_lib_memory.cpp  bf_lib_memory_arena.cpp  bf_lib_rand.cpp  bf_version.cpp  main.cpp
src/engine/: bf_clay_ui.cpp  bf_engine.cpp  bf_engine_config.cpp  bf_game_exe.cpp
src/engine/imgui/: imgui_impl_bgfx.cpp
src/engine/shaders/: imgui_image_fs.sc  quad_fs.sc  quad_tex_fs.sc  quad_tex_var.def.sc  quad_tex_vs.sc  quad_var.def.sc  quad_vs.sc
src/game/: bf_constants.cpp  bf_game.cpp  bf_gamelib.fbs  bf_save.fbs  gamelib.yaml
